--- a/src/styles/PlayerList.css
+++ b/src/styles/PlayerList.css
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
   background-color: var(--bg-primary);
-  border-radius: var(--border-radius);
-  width: 300px;
+  border-radius: 5px;
+  width:100%;
 }
 
 .player-list h3 {
@@ -29,7 +28,7 @@
   gap: 1rem;
   padding: 1rem;
   background-color: var(--bg-secondary);
-  border-radius: var(--border-radius);
+  border-radius: 5px;
   transition: all 0.2s ease;
   border: 1px solid var(--border-subtle);
 }
@@ -72,7 +71,8 @@
 }
 
 .debuff-container {
-  display: flex;
+  /*display: flex;*/
+  display:none;
   gap: 0.5rem;
   flex-wrap: wrap;
   margin-top: 0.25rem;
@@ -80,16 +80,12 @@
 
 .debuff-tag {
   padding: 0.25rem 0.5rem;
-  background-color: var(--bg-danger);
-  color: var(--text-inverse);
-  border-radius: var(--border-radius-sm);
   font-size: 0.8rem;
   line-height: 1;
   white-space: nowrap;
 }
 
 .no-debuffs {
-  color: var(--text-subtle);
   font-size: 0.8rem;
   font-style: italic;
 }
