--- a/src/styles/CardDisplay.css
+++ b/src/styles/CardDisplay.css
@@ -1,11 +1,11 @@
 .card-display {
   width: 100%;
   height: 100%;
-  border: 2px solid transparent;
+  /*border: 2px solid transparent;*/
   border-radius: var(--cell-border-radius);
   cursor: pointer;
   opacity: 1;
-  background-color: var(--bg-card);
+  /*background-color: var(--bg-card);*/
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -17,6 +17,7 @@
   touch-action: none;
 }
 
+/*TODO this isn't working - current using the wrapper in player hand*/
 .card-display.selected {
   border-color: var(--accent-primary);
   border-width: 3px;
@@ -35,7 +36,7 @@
 .card-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /*object-fit: cover;*/
   pointer-events: none;
   filter: brightness(0.9) contrast(1.1);
 }
@@ -49,7 +50,8 @@
   text-align: center;
   font-size: 0.8em;
   color: var(--text-secondary);
-  background-color: var(--bg-card);
-  padding: 0.5em;
+  background-color: var(--bg-card-fallback);
+  padding: 8px;
   box-sizing: border-box;
+  word-break: break-word;
 }
